@@ -3,8 +3,7 @@ package riccardomamoli.dao;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.EntityTransaction;
 import jakarta.persistence.TypedQuery;
-import riccardomamoli.entities.StatusMezzo;
-import riccardomamoli.entities.TrattaPercorsa;
+import riccardomamoli.entities.*;
 
 import java.util.List;
 
@@ -45,16 +44,22 @@ public class TrattaPercorsaDao {
     public void addTrattaPercorsa(TrattaPercorsa trattaPercorsa) {
         EntityTransaction tx = em.getTransaction();
 
-        TypedQuery<TrattaPercorsa> query = em.createQuery("SELECT tp FROM TrattaPercorsa tp WHERE tp.mezzo.id = :mezzoId ORDER BY tp.dataFine DESC", TrattaPercorsa.class);
+        TypedQuery<TrattaPercorsa> query = em.createQuery("SELECT tp FROM TrattaPercorsa tp WHERE tp.mezzo.id = :mezzoId AND tp.tratta.id = :trattaId ORDER BY tp.orarioArrivo DESC", TrattaPercorsa.class);
         query.setParameter("mezzoId", trattaPercorsa.getMezzo().getId_Mezzo());
+        query.setParameter("trattaId", trattaPercorsa.getTratta().getId_tratta());
 
         List<TrattaPercorsa> risultati = query.setMaxResults(1).getResultList();
 
         if (!risultati.isEmpty()) {
-            TrattaPercorsa ultimaTrattaPerc = risultati.getFirst();
-                if (ultimaTrattaPerc.getOrarioPartenza().isBefore(trattaPercorsa.getOrarioArrivo()) ||
-                    ultimaTrattaPerc.getOrarioPartenza().isEqual(trattaPercorsa.getOrarioArrivo()) || ultimaTrattaPerc.getOrarioPartenza().isAfter(ultimaTrattaPerc.getOrarioArrivo())) {
-                throw new IllegalArgumentException("Errore nell'inserimento degli orari.");
+            TrattaPercorsa ultimaTrattaPerc = risultati.get(0);
+
+            if (trattaPercorsa.getOrarioPartenza().isBefore(ultimaTrattaPerc.getOrarioArrivo()) ||
+                    trattaPercorsa.getOrarioPartenza().equals(ultimaTrattaPerc.getOrarioArrivo())) {
+                throw new IllegalArgumentException("Errore: l'orario di partenza della nuova tratta non può essere prima o uguale all'orario di arrivo dell'ultima tratta.");
+            }
+
+            if (trattaPercorsa.getOrarioArrivo().isBefore(trattaPercorsa.getOrarioPartenza())) {
+                throw new IllegalArgumentException("Errore: l'orario di arrivo non può essere prima dell'orario di partenza della nuova tratta.");
             }
         }
 
@@ -63,10 +68,15 @@ public class TrattaPercorsaDao {
         tx.commit();
     }
 
+
+
+
+
+
     public void updateTrattaPercorsa(TrattaPercorsa trattaPercorsa) {
         EntityTransaction tx = em.getTransaction();
 
-        TypedQuery<TrattaPercorsa> query = em.createQuery("SELECT tp FROM TrattaPercorsa tp WHERE tp.mezzo.id = :mezzoId ORDER BY tp.dataFine DESC", TrattaPercorsa.class);
+        TypedQuery<TrattaPercorsa> query = em.createQuery("SELECT tp FROM TrattaPercorsa tp WHERE tp.mezzo.id = :mezzoId ORDER BY tp.orarioArrivo DESC", TrattaPercorsa.class);
         query.setParameter("mezzoId", trattaPercorsa.getMezzo().getId_Mezzo());
 
         List<TrattaPercorsa> risultati = query.setMaxResults(1).getResultList();
@@ -82,5 +92,31 @@ public class TrattaPercorsaDao {
             System.out.println("Nessun status trovato per il mezzo richiesto.");
         }
     }
+
+    public void printMezziPerTratta (int trattaId) {
+        TypedQuery<Mezzo> query = em.createQuery("SELECT m FROM Mezzo m JOIN TrattaPercorsa tp ON m.id = tp.mezzo.id WHERE tp.tratta.id = :trattaId", Mezzo.class);
+        query.setParameter("trattaId", trattaId);
+
+        List<Mezzo> mezzi = query.getResultList();
+
+        if (!mezzi.isEmpty()) {
+
+            String tipologia;
+            for (Mezzo mezzo : mezzi) {
+                if(mezzo instanceof Autobus) {
+                    tipologia = "Autobus";
+                } else {
+                    tipologia = "Tram";
+                }
+                System.out.println("Mezzo ID: " + mezzo.getId_Mezzo());;
+                System.out.println("Tipologia: " + tipologia);
+                System.out.println("Capacità: " + mezzo.getCapienza());
+
+            }
+        } else {
+            System.out.println("Nessun mezzo associato alla tratta con ID " + trattaId);
+        }
+    }
+
 
 }
